--- a/web/templates/index.templ
+++ b/web/templates/index.templ
@@ -153,6 +153,8 @@ templ IndexPage() {
 
 
 </body>
+<script src="/static/js/result-formatter.js"></script>
+<script src="/static/js/form-handler.js"></script>
 </html>
 }
 
